--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <footer>
         <p>&copy; 2025 Milice - Todos os direitos reservados.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
